[gd_scene load_steps=8 format=3 uid="uid://ckrynjqh3lk53"]

[ext_resource type="Script" path="res://scenes/ui/gui/summon_card/summon_card.gd" id="1_5i236"]
[ext_resource type="Texture2D" uid="uid://bu20pnogf200d" path="res://assets/sprites/summon cards/summon_card_background.png" id="1_mh3jb"]
[ext_resource type="Texture2D" uid="uid://dp4oxrapbumxd" path="res://assets/sprites/summon cards/summon faces/ilumilily_face.png" id="2_v40ls"]
[ext_resource type="Texture2D" uid="uid://83q8s4udx3a7" path="res://assets/sprites/summon cards/summon_card_over.png" id="3_nsdhf"]
[ext_resource type="Texture2D" uid="uid://jd0nv5gn5p68" path="res://assets/sprites/summon cards/summon_card_recharge.png" id="4_60q2a"]
[ext_resource type="Texture2D" uid="uid://bc3umoktpegog" path="res://assets/sprites/summon cards/summon_card_selection.png" id="6_jsfxt"]

[sub_resource type="LabelSettings" id="LabelSettings_70ydy"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.6)
shadow_offset = Vector2(1.5, 1.5)

[node name="Summon_Card" type="Control"]
custom_minimum_size = Vector2(64, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 40.0
script = ExtResource("1_5i236")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Background_Rect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mh3jb")
expand_mode = 1

[node name="Face_Rect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v40ls")
expand_mode = 1

[node name="Over_Rect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nsdhf")
expand_mode = 1

[node name="Dark_Rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.28, 0.0784, 0.0784, 0.635294)

[node name="Hover_Rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.541176)

[node name="Recharge_Bar" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
step = 0.1
value = 3.7
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("4_60q2a")

[node name="Cost_lbl" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "999"
label_settings = SubResource("LabelSettings_70ydy")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Selection_Rect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_jsfxt")
expand_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
